--- a/www/index.html
+++ b/www/index.html
@@ -8,8 +8,12 @@
   <script src="lib/jquery-3.6.0.min.js"></script>
   <script src="components/plugins.js"></script>
 
+  <!-- mapquest -->
+  <script src="https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.js"></script>
+  <link type="text/css" rel="stylesheet" href="https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.css"/> 
+
   <link rel="stylesheet" href="components/loader.css">
-  <link rel="stylesheet" hred="lib/css/bootstrap.min.css">
+  <link rel="stylesheet" href="lib/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
 
   <script>
@@ -24,6 +28,22 @@
   </script>
 </head>
 <body>
-  This is a template for Onsen UI app.
+  <div class="container">
+    <div class="row">
+      <div class="col-sm">
+        <h3>Clique no botão abaixo para se localizar no mapa.</h3>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm">
+        <button class="btn btn-primary btn-block" id="local">Localizar</button>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm">
+        <div class="map" id="map"></div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
